[tool.poetry]
name = "donweb"
version = "0.1.0"
description = ""
authors = ["don <tang@95@88.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
upyun = "^2.5.5"
uvicorn = "^0.28.0"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
